--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <h1>Let's Play Tic Tac Toe</h1><br>
     </div>
 
-    <div id="gridElement" class="container border-primary grid-element">
+    <div id="gridElement" class="container grid-element text-center">
         <div class="row">
             <div class="col-4 border d-flex align-items-center justify-content" id="topRight"></div>
             <div class="col-4 border d-flex align-items-center justify-content" id="topMiddle"></div>
