fixed header size

--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
 </head>
 
 <body>
-    <div class="main-header">
-        <h1>Let's Play Tic Tac Toe</h1><br>
+    <div>
+        <h1 class="header pt-2 pb-2">Let's Play Tic Tac Toe</h1><br>
     </div>
 
-    <div id="gridElement" class="container grid-element text-center">
+    <div id="gridElement" class="container grid-element text-center align-items-center">
         <div class="row">
             <div class="col-4 border d-flex align-items-center justify-content" id="topRight"></div>
             <div class="col-4 border d-flex align-items-center justify-content" id="topMiddle"></div>
