added a bubble background in case I can add images instead of x and o

--- a/index.html
+++ b/index.html
@@ -11,6 +11,21 @@
   </head>
 
 <body>
+    <section class="sticky">
+        <div class="bubbles">
+            <div class="bubble"></div>
+          <div class="bubble"></div>
+          <div class="bubble"></div>
+          <div class="bubble"></div>
+          <div class="bubble"></div>
+          <div class="bubble"></div>
+          <div class="bubble"></div>
+          <div class="bubble"></div>
+          <div class="bubble"></div>
+          <div class="bubble"></div>
+          
+        </div>
+      </section>
     <div>
         <h1 class="header pt-2 pb-2">Let's Play Tic Tac Toe</h1><br>
         <p class="game-header pt-2 pb-2">Click on the square to claim the space!</p>
@@ -21,7 +36,7 @@
 
           <div class="btn-toolbar mb-2 mb-md-0">
             <div class="btn-group">
-              <button type="button" id="buttonCaptureEvents" class="btn btn-sm btn-outline-light">Start Game<span data-feather="play"></span></button>
+              <button type="button" id="buttonCaptureEvents" class="btn btn-sm btn-outline-light">Play Tic Tac Toe!<span data-feather="play"></span></button>
             </div>
           </div>
         </div>
@@ -36,9 +51,7 @@
         <div class="cell" data-index="8"></div>
         <div class="cell" data-index="9"></div>
     </div>
-
-   
-
+    </main>
 
     <script src="node_modules/jquery/dist/jquery.js"></script>
     <script src="index.js"></script>
