Friday commit. Need to figure out how to add play again button to winning message, and why my cells only fill when there is an opacity

--- a/index.html
+++ b/index.html
@@ -59,18 +59,17 @@
   </div>
 
 <!-- Winner Announcement -->
-  <div class="winner-msg centerButton " id="endMessage">
-    <h2 class="pt-2 hidden" id="game-end-text">We have a winner!</h2>
+  <div class="winner-msg centerButton " id="endMessage-win">
+    <h2 class="pt-2 hidden" id="game-win-text">We have a winner!</h2>
     <div class="win">
         <button id="restartBtn" class="btn btn-sm btn-outline-light p-2 start-btn hidden">Let's Play Again</button>
     </div>
 </div>
 
   <!-- Draw Announcement -->
- <div class="draw-msg centerButton hidden" id="endMessage">
+ <div class="draw-msg centerButton" id="endMessage-draw">
+    <h2 class="pt-2 hidden" id="game-draw-text">Game is a Draw.</h2>
     <div class="draw">
-        <h2 class="pt-2 hidden">Game is a Draw.</h2>
-    </div>
         <button id="drawBtn" class="btn btn-sm btn-outline-light p-2 start-btn hidden">Let's Play Again</button>
     </div>
 </div>
