--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
    </div>
 
 <!-- Found a css/html background for animated bubbles -->
-<div class="sticky">
+<!-- <div class="sticky">
     <div class="bubbles">
         <div class="bubble"></div>
         <div class="bubble"></div>
@@ -40,7 +40,7 @@
         <div class="bubble"></div>
         <div class="bubble"></div>
     </div>
-</div>
+</div> -->
 
 
 <!-- Grid for tic tac toe game -->
@@ -63,6 +63,22 @@
 <div id="endGame" class="hidden">
     <h2 id="endGameText"></h2><br>
     <button class="start-btn" id="start-btn">Let's Play Again!</button>
+    <!-- Found a css/html background for animated bubbles -->
+<div class="sticky">
+    <div class="bubbles">
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+    </div>
+</div>
+
 </div>
 
     <script src="node_modules/jquery/dist/jquery.js"></script>
