--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
 <!-- Title header section https://www.youtube.com/watch?v=kRQEkTHIEyU -->
 <div class="centerButton">
     <h1 class="header pt-4">Under the Sea Tic Tac Toe</h1>
-    <p class="game-header pb-2">Click on the square to claim the space!</p>
-    <div class="row">
+       <div class="row">
         <div class="animalGroup">
             <img src="images/orca.png" alt="image of orca" class="animalImage">
             <img src="images/sealion.png" alt="image of sea lion" class="animalImage">
@@ -24,9 +23,10 @@
             <img src="images/seaturtle.png" alt="image of sea turtle" class="animalImage">
         </div>
     </div>
+    <p class="game-header p-2">Click on the square to claim the space!</p>
    </div>
 
-<!-- Found a css/html background for animated bubbles -->
+
 <!-- <div class="sticky">
     <div class="bubbles">
         <div class="bubble"></div>
@@ -62,23 +62,22 @@
 
 <div id="endGame" class="hidden">
     <h2 id="endGameText"></h2><br>
-    <button class="start-btn" id="start-btn">Let's Play Again!</button>
-    <!-- Found a css/html background for animated bubbles -->
-<div class="sticky">
-    <div class="bubbles">
-        <div class="bubble"></div>
-        <div class="bubble"></div>
-        <div class="bubble"></div>
-        <div class="bubble"></div>
-        <div class="bubble"></div>
-        <div class="bubble"></div>
-        <div class="bubble"></div>
-        <div class="bubble"></div>
-        <div class="bubble"></div>
-        <div class="bubble"></div>
+    <button class="start-btn btn btn-sm" id="startButton">Let's Play Again!</button>
+<!-- Found a css/html background for animated bubbles to release when this div unhides -->
+    <div class="sticky">
+        <div class="bubbles">
+            <div class="bubble"></div>
+            <div class="bubble"></div>
+            <div class="bubble"></div>
+            <div class="bubble"></div>
+            <div class="bubble"></div>
+            <div class="bubble"></div>
+            <div class="bubble"></div>
+            <div class="bubble"></div>
+            <div class="bubble"></div>
+            <div class="bubble"></div>
+        </div>
     </div>
-</div>
-
 </div>
 
     <script src="node_modules/jquery/dist/jquery.js"></script>
@@ -88,5 +87,5 @@
     <div class="footer">
        <br><br><br><hr><p class="footer-text">Promineo Tech - Week 11 - Erin Brickman</p>
     </div>
-    </footer>
+</footer>
 </html>
